// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinearProgress should render correctly 1`] = `
<div>
  <span
    aria-valuemax="100"
    aria-valuemin="0"
    class="rmd-linear-progress rmd-linear-progress--horizontal rmd-linear-progress--indeterminate"
    id="linear-progress-:r0:"
    role="progressbar"
  >
    <span
      class="rmd-linear-progress__bar rmd-linear-progress__bar--horizontal rmd-linear-progress__bar--indeterminate"
    />
  </span>
</div>
`;

exports[`LinearProgress should render correctly 2`] = `
<div>
  <span
    aria-valuemax="100"
    aria-valuemin="0"
    class="rmd-linear-progress rmd-linear-progress--vertical rmd-linear-progress--indeterminate"
    id="linear-progress-:r0:"
    role="progressbar"
    style="height: 240px;"
  >
    <span
      class="rmd-linear-progress__bar rmd-linear-progress__bar--vertical rmd-linear-progress__bar--indeterminate rmd-linear-progress__bar--indeterminate-vertical"
    />
  </span>
</div>
`;

exports[`LinearProgress should render correctly 3`] = `
<div>
  <span
    aria-valuemax="100"
    aria-valuemin="0"
    class="rmd-linear-progress rmd-linear-progress--vertical rmd-linear-progress--indeterminate"
    id="linear-progress-:r0:"
    role="progressbar"
    style=""
  >
    <span
      class="rmd-linear-progress__bar rmd-linear-progress__bar--vertical rmd-linear-progress__bar--indeterminate rmd-linear-progress__bar--indeterminate-vertical"
    />
  </span>
</div>
`;

exports[`LinearProgress should render correctly 4`] = `
<div>
  <span
    aria-valuemax="100"
    aria-valuemin="0"
    class="rmd-linear-progress rmd-linear-progress--vertical rmd-linear-progress--indeterminate"
    id="linear-progress-:r0:"
    role="progressbar"
    style="height: 300px;"
  >
    <span
      class="rmd-linear-progress__bar rmd-linear-progress__bar--vertical rmd-linear-progress__bar--indeterminate rmd-linear-progress__bar--indeterminate-vertical"
    />
  </span>
</div>
`;

exports[`LinearProgress should render correctly 5`] = `
<div>
  <span
    aria-valuemax="100"
    aria-valuemin="0"
    class="rmd-linear-progress rmd-linear-progress--horizontal rmd-linear-progress--indeterminate"
    id="linear-progress-:r0:"
    role="progressbar"
    style=""
  >
    <span
      class="rmd-linear-progress__bar rmd-linear-progress__bar--horizontal rmd-linear-progress__bar--horizontal-reverse rmd-linear-progress__bar--indeterminate rmd-linear-progress__bar--indeterminate-reverse"
    />
  </span>
</div>
`;

exports[`LinearProgress should render correctly 6`] = `
<div>
  <span
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="30"
    class="rmd-linear-progress rmd-linear-progress--horizontal rmd-linear-progress--determinate"
    id="linear-progress-:r0:"
    role="progressbar"
    style=""
  >
    <span
      class="rmd-linear-progress__bar rmd-linear-progress__bar--horizontal rmd-linear-progress__bar--animate rmd-linear-progress__bar--determinate"
      style="width: 30%;"
    />
  </span>
</div>
`;

exports[`LinearProgress should render correctly 7`] = `
<div>
  <span
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="30"
    class="rmd-linear-progress rmd-linear-progress--horizontal rmd-linear-progress--determinate"
    id="linear-progress-:r0:"
    role="progressbar"
    style=""
  >
    <span
      class="rmd-linear-progress__bar rmd-linear-progress__bar--horizontal rmd-linear-progress__bar--horizontal-reverse rmd-linear-progress__bar--animate rmd-linear-progress__bar--determinate rmd-linear-progress__bar--determinate-reverse"
      style="width: 30%;"
    />
  </span>
</div>
`;

exports[`LinearProgress should render correctly 8`] = `
<div>
  <span
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="30"
    class="rmd-linear-progress rmd-linear-progress--vertical rmd-linear-progress--determinate"
    id="linear-progress-:r0:"
    role="progressbar"
    style="height: 240px;"
  >
    <span
      class="rmd-linear-progress__bar rmd-linear-progress__bar--vertical rmd-linear-progress__bar--animate rmd-linear-progress__bar--determinate"
      style="height: 30%;"
    />
  </span>
</div>
`;

exports[`LinearProgress should render correctly 9`] = `
<div>
  <span
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="30"
    class="rmd-linear-progress rmd-linear-progress--vertical rmd-linear-progress--determinate"
    id="linear-progress-:r0:"
    role="progressbar"
    style="height: 240px;"
  >
    <span
      class="rmd-linear-progress__bar rmd-linear-progress__bar--vertical rmd-linear-progress__bar--vertical-reverse rmd-linear-progress__bar--animate rmd-linear-progress__bar--determinate rmd-linear-progress__bar--determinate-vertical-reverse"
      style="height: 30%;"
    />
  </span>
</div>
`;

exports[`LinearProgress should render correctly 10`] = `
<div>
  <span
    aria-valuemax="100"
    aria-valuemin="0"
    class="rmd-linear-progress rmd-linear-progress--horizontal rmd-linear-progress--indeterminate"
    id="custom-id"
    role="progressbar"
    style=""
  >
    <span
      class="rmd-linear-progress__bar rmd-linear-progress__bar--horizontal rmd-linear-progress__bar--indeterminate"
      style=""
    />
  </span>
</div>
`;
